--- a/Plugins/ImageProjector/Properties/Resources.fr.resx
+++ b/Plugins/ImageProjector/Properties/Resources.fr.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,10 +117,73 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Search" xml:space="preserve">
-    <value>搜索</value>
+  <data name="ImageProjector" xml:space="preserve">
+    <value>outil de projection d'images</value>
   </data>
-  <data name="ChartGenerationTool" xml:space="preserve">
-    <value>图卡生成工具</value>
+  <data name="MonitorSelection" xml:space="preserve">
+    <value>Sélection du moniteur</value>
+  </data>
+  <data name="TargetMonitor" xml:space="preserve">
+    <value>Affichage cible :</value>
+  </data>
+  <data name="PrimaryMonitor" xml:space="preserve">
+    <value>Écran principal</value>
+  </data>
+  <data name="SecondaryMonitor" xml:space="preserve">
+    <value>écran secondaire</value>
+  </data>
+  <data name="ImageSelection" xml:space="preserve">
+    <value>Sélection d'images</value>
+  </data>
+  <data name="Browse" xml:space="preserve">
+    <value>Parcourir...</value>
+  </data>
+  <data name="SupportedFormats" xml:space="preserve">
+    <value>Formats pris en charge : TIF, PNG, JPG, BMP</value>
+  </data>
+  <data name="ImagePreview" xml:space="preserve">
+    <value>Aperçu de l'image</value>
+  </data>
+  <data name="Project" xml:space="preserve">
+    <value>projection</value>
+  </data>
+  <data name="StopProjection" xml:space="preserve">
+    <value>Arrêter la projection</value>
+  </data>
+  <data name="ImageFileFilter" xml:space="preserve">
+    <value>Fichiers image | *.tif; *.tiff; *.png; *.jpg; *.jpeg; *.bmp | Fichiers TIF | *.tif; *.tiff | Fichiers PNG | *.png | Fichiers JPEG | *.jpg; *.jpeg | Fichiers BMP | *.bmp | Tous les fichiers | *.*</value>
+  </data>
+  <data name="SelectImageFile" xml:space="preserve">
+    <value>Sélectionner un fichier image</value>
+  </data>
+  <data name="FileNotFound" xml:space="preserve">
+    <value>Le fichier n'existe pas.</value>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>erreur</value>
+  </data>
+  <data name="Warning" xml:space="preserve">
+    <value>avertir</value>
+  </data>
+  <data name="ImageLoaded" xml:space="preserve">
+    <value>Images chargées</value>
+  </data>
+  <data name="FailedToLoadImage" xml:space="preserve">
+    <value>Impossible de charger l'image</value>
+  </data>
+  <data name="SelectImageFirst" xml:space="preserve">
+    <value>Veuillez d'abord sélectionner l'image et le moniteur.</value>
+  </data>
+  <data name="FailedToStartProjection" xml:space="preserve">
+    <value>Impossible de démarrer la projection</value>
+  </data>
+  <data name="ProjectionStarted" xml:space="preserve">
+    <value>Projection en cours... Appuyez sur ÉCHAP pour éteindre.</value>
+  </data>
+  <data name="ProjectionStopped" xml:space="preserve">
+    <value>La projection s'est arrêtée</value>
+  </data>
+  <data name="PressEscToClose" xml:space="preserve">
+    <value>Appuyez sur ÉCHAP pour fermer</value>
   </data>
 </root>
