--- a/Plugins/ImageProjector/Properties/Resources.ja.resx
+++ b/Plugins/ImageProjector/Properties/Resources.ja.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,10 +117,73 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Search" xml:space="preserve">
-    <value>搜索</value>
+  <data name="ImageProjector" xml:space="preserve">
+    <value>画像投影ツール</value>
   </data>
-  <data name="ChartGenerationTool" xml:space="preserve">
-    <value>图卡生成工具</value>
+  <data name="MonitorSelection" xml:space="preserve">
+    <value>モニターの選択</value>
+  </data>
+  <data name="TargetMonitor" xml:space="preserve">
+    <value>ターゲット表示:</value>
+  </data>
+  <data name="PrimaryMonitor" xml:space="preserve">
+    <value>メインディスプレイ</value>
+  </data>
+  <data name="SecondaryMonitor" xml:space="preserve">
+    <value>セカンダリディスプレイ</value>
+  </data>
+  <data name="ImageSelection" xml:space="preserve">
+    <value>画像の選択</value>
+  </data>
+  <data name="Browse" xml:space="preserve">
+    <value>ブラウズ...</value>
+  </data>
+  <data name="SupportedFormats" xml:space="preserve">
+    <value>サポートされている形式: TIF、PNG、JPG、BMP</value>
+  </data>
+  <data name="ImagePreview" xml:space="preserve">
+    <value>画像プレビュー</value>
+  </data>
+  <data name="Project" xml:space="preserve">
+    <value>投影</value>
+  </data>
+  <data name="StopProjection" xml:space="preserve">
+    <value>投影を停止</value>
+  </data>
+  <data name="ImageFileFilter" xml:space="preserve">
+    <value>画像ファイル | *.tif; *.tiff; *.png; *.jpg; *.jpeg; *.bmp | TIF ファイル | *.tif; *.tiff | PNG ファイル | *.png | JPEG ファイル | *.jpg; *.jpeg | BMP ファイル | *.bmp | すべてのファイル | *.*</value>
+  </data>
+  <data name="SelectImageFile" xml:space="preserve">
+    <value>画像ファイルを選択</value>
+  </data>
+  <data name="FileNotFound" xml:space="preserve">
+    <value>ファイルが存在しません。</value>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>間違い</value>
+  </data>
+  <data name="Warning" xml:space="preserve">
+    <value>警告する</value>
+  </data>
+  <data name="ImageLoaded" xml:space="preserve">
+    <value>画像が読み込まれました</value>
+  </data>
+  <data name="FailedToLoadImage" xml:space="preserve">
+    <value>画像を読み込めません</value>
+  </data>
+  <data name="SelectImageFirst" xml:space="preserve">
+    <value>まずは画像とモニターを選択してください。</value>
+  </data>
+  <data name="FailedToStartProjection" xml:space="preserve">
+    <value>投影を開始できません</value>
+  </data>
+  <data name="ProjectionStarted" xml:space="preserve">
+    <value>投影中... オフにするには ESC キーを押してください。</value>
+  </data>
+  <data name="ProjectionStopped" xml:space="preserve">
+    <value>投影が停止しました</value>
+  </data>
+  <data name="PressEscToClose" xml:space="preserve">
+    <value>ESCキーを押して閉じる</value>
   </data>
 </root>
