--- a/Plugins/ImageProjector/Properties/Resources.ko.resx
+++ b/Plugins/ImageProjector/Properties/Resources.ko.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,10 +117,73 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Search" xml:space="preserve">
-    <value>搜索</value>
+  <data name="ImageProjector" xml:space="preserve">
+    <value>이미지 투영 도구</value>
   </data>
-  <data name="ChartGenerationTool" xml:space="preserve">
-    <value>图卡生成工具</value>
+  <data name="MonitorSelection" xml:space="preserve">
+    <value>모니터 선택</value>
+  </data>
+  <data name="TargetMonitor" xml:space="preserve">
+    <value>대상 디스플레이:</value>
+  </data>
+  <data name="PrimaryMonitor" xml:space="preserve">
+    <value>메인 디스플레이</value>
+  </data>
+  <data name="SecondaryMonitor" xml:space="preserve">
+    <value>보조 디스플레이</value>
+  </data>
+  <data name="ImageSelection" xml:space="preserve">
+    <value>이미지 선택</value>
+  </data>
+  <data name="Browse" xml:space="preserve">
+    <value>먹다...</value>
+  </data>
+  <data name="SupportedFormats" xml:space="preserve">
+    <value>지원되는 형식: TIF, PNG, JPG, BMP</value>
+  </data>
+  <data name="ImagePreview" xml:space="preserve">
+    <value>이미지 미리보기</value>
+  </data>
+  <data name="Project" xml:space="preserve">
+    <value>투사</value>
+  </data>
+  <data name="StopProjection" xml:space="preserve">
+    <value>투사 중지</value>
+  </data>
+  <data name="ImageFileFilter" xml:space="preserve">
+    <value>이미지 파일 | *.tif; *.tiff; *.png; *.jpg; *.jpeg; *.bmp | TIF 파일 | *.tif; *.tiff | PNG 파일 | *.png | JPEG 파일 | *.jpg; *.jpeg | BMP 파일 | *.bmp | 모든 파일 | *.*</value>
+  </data>
+  <data name="SelectImageFile" xml:space="preserve">
+    <value>이미지 파일을 선택하세요</value>
+  </data>
+  <data name="FileNotFound" xml:space="preserve">
+    <value>파일이 존재하지 않습니다.</value>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>실수</value>
+  </data>
+  <data name="Warning" xml:space="preserve">
+    <value>경고하다</value>
+  </data>
+  <data name="ImageLoaded" xml:space="preserve">
+    <value>이미지가 로드되었습니다</value>
+  </data>
+  <data name="FailedToLoadImage" xml:space="preserve">
+    <value>이미지를 로드할 수 없습니다</value>
+  </data>
+  <data name="SelectImageFirst" xml:space="preserve">
+    <value>먼저 이미지와 모니터를 선택해 주세요.</value>
+  </data>
+  <data name="FailedToStartProjection" xml:space="preserve">
+    <value>프로젝션을 시작할 수 없습니다</value>
+  </data>
+  <data name="ProjectionStarted" xml:space="preserve">
+    <value>투사 중... ESC를 눌러 끕니다.</value>
+  </data>
+  <data name="ProjectionStopped" xml:space="preserve">
+    <value>투사가 중단되었습니다</value>
+  </data>
+  <data name="PressEscToClose" xml:space="preserve">
+    <value>ESC를 눌러 닫으세요</value>
   </data>
 </root>
