--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -2490,4 +2490,37 @@
   <data name="ProcessIVScanDataAndExportToCSV" xml:space="preserve">
     <value>處理SMU掃描數據，保存到CSV並繪製IV曲線</value>
   </data>
+  <data name="OpenDeviceManager" xml:space="preserve">
+    <value>開啟裝置管理員</value>
+  </data>
+  <data name="LicenseManager" xml:space="preserve">
+    <value>許可證管理</value>
+  </data>
+  <data name="CopyLicense" xml:space="preserve">
+    <value>複製許可證</value>
+  </data>
+  <data name="ExportLicense" xml:space="preserve">
+    <value>匯出許可證</value>
+  </data>
+  <data name="ExportLicenseToFile" xml:space="preserve">
+    <value>匯出許可證到文件</value>
+  </data>
+  <data name="LicenseCopiedToClipboard" xml:space="preserve">
+    <value>許可證已複製到剪貼簿</value>
+  </data>
+  <data name="NoLicenseAvailable" xml:space="preserve">
+    <value>沒有可用的許可證</value>
+  </data>
+  <data name="LicenseExportedSuccessfully" xml:space="preserve">
+    <value>許可證匯出成功</value>
+  </data>
+  <data name="FailedToOpenDeviceManager" xml:space="preserve">
+    <value>無法開啟裝置管理員</value>
+  </data>
+  <data name="CopyLicenseFailed" xml:space="preserve">
+    <value>複製許可證失敗</value>
+  </data>
+  <data name="ExportLicenseFailed" xml:space="preserve">
+    <value>匯出許可證失敗</value>
+  </data>
 </root>
