--- a/Projects/ProjectStarkSemi/Properties/Resources.resx
+++ b/Projects/ProjectStarkSemi/Properties/Resources.resx
@@ -163,4 +163,10 @@
   <data name="NotCalibrated" xml:space="preserve">
     <value>未校正</value>
   </data>
+  <data name="Azimuth" xml:space="preserve">
+    <value>方位角</value>
+  </data>
+  <data name="PolarAngle" xml:space="preserve">
+    <value>极角</value>
+  </data>
 </root>
